--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
 
                </div>
 
-               <div class="seemore_bt"><a href="#">See More</a></div>
+               <div class="seemore_bt"><a href="{% url 'create' %}">Yangi qoshish</a></div>
             </div>
          </div>
       </div>
